Fix text align in css

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ img {
 }
 
 .bottom {
+  text-align: center;
   font-size: .75rem;
   background-color: #ffe500;
   padding: .2em .5em .3em;
